--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -1,8 +1,12 @@
 .header{
     border: 1px solid #f0f0f0;
     border-radius: 4px;
+    padding: 4px;
 }
 .navigation {
     display: flex;
     list-style: none;
+} 
+.navigationli {
+    padding: 15px;
 }
