--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ body {
     )    
 }
 
+h1{
+  font-family: var(--font-grotesk), sans-serif;
+}
+
 a {
   color: inherit;
   text-decoration: none;
